deps/v8/test/message/fail/modules-import-attributes-fail-2.mjs
// Copyright 2021 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
//
// MODULE
//

import "modules-skip-1-import-attributes-fail.mjs" with { type: "json"}
